# cli

./: Cargo.toml  README.md
src/: cam.rs  main.rs  menu.rs  net.rs  state.rs
